--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,13 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+.scroll-content {
+  //margin-bottom: 0px !important;
+  overflow-y: auto;
+}
+
+.fixed-content {
+  margin-bottom: 56px !important;
+}
