--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,12 +34,19 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #8e83b4,
   secondary:  #32db64,
   danger:     #f53d3d,
+  warning:    #ffb347,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  girl:       pink,
+  boy:        lightblue,
+  liked:      lightgreen,
+  unliked:    salmon
 );
+
+$toast-md-background: #8e83b4;
 
 
 // App iOS Variables
