--- a/src/components/card/card.html
+++ b/src/components/card/card.html
@@ -1,4 +1,4 @@
-<ion-content padding>
+<ion-content padding *ngIf="subset && subset.length > 0">
     <div class="wiggle" swing-stack #swingstack [stackConfig]="stackConfig" (throwoutleft)="vote(false)" (throwoutright)="vote(true)"
          id="card-stack">
         <ion-card class="balloon zoom-pop-late" #swingcards swing-card *ngFor="let name of card">
@@ -31,13 +31,13 @@
         </button>
     </ion-fab>
 </ion-content>
-<!--<ion-content padding text-center *ngIf="subset">-->
-    <!--<span class="balloon zoom-pop-late">You have seen all {{gender}} names!</span>-->
-    <!--<div class="kawaii zoom-pop">-->
-        <!--<div class="eyes">-->
-            <!--<div class="eye eye-left"></div>-->
-            <!--<div class="eye eye-right"></div>-->
-        <!--</div>-->
-        <!--<div class="mouth"></div>-->
-    <!--</div>-->
-<!--</ion-content>-->
+<ion-content padding text-center *ngIf="!subset || subset.length == 0">
+    <span class="balloon zoom-pop-late">You have seen all {{gender}} names!</span>
+    <div class="kawaii zoom-pop">
+        <div class="eyes">
+            <div class="eye eye-left"></div>
+            <div class="eye eye-right"></div>
+        </div>
+        <div class="mouth"></div>
+    </div>
+</ion-content>
