--- a/src/components/register/register.html
+++ b/src/components/register/register.html
@@ -1,17 +1,22 @@
-<ion-list>
-    <ion-list-header>Create account</ion-list-header>
-    <form (ngSubmit)="register()">
-        <ion-item>
-            <ion-input placeholder="Email" type="text" [(ngModel)]="account.email" name="email"></ion-input>
-        </ion-item>
-
-        <ion-item>
-            <ion-input placeholder="Password" type="password" [(ngModel)]="account.password" name="password"></ion-input>
-        </ion-item>
-
-        <ion-item>
-            <button ion-button block type="submit">Create account</button>
-        </ion-item>
-    </form>
-</ion-list>
+<ion-grid>
+    <ion-row>
+        <ion-col col-12 col-md-6 push-md-3 col-lg-4 push-lg-4>
+            <ion-list>
+                <ion-list-header>Create account</ion-list-header>
+                <form (ngSubmit)="register()">
+                    <ion-item>
+                        <ion-input placeholder="Email" type="text" [(ngModel)]="account.email" name="email"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                        <ion-input placeholder="Password" type="password" [(ngModel)]="account.password"
+                                   name="password"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                        <button ion-button block type="submit">Create account</button>
+                    </ion-item>
+                </form>
+            </ion-list>
+        </ion-col>
+    </ion-row>
+</ion-grid>
 
