--- a/src/components/user/user.html
+++ b/src/components/user/user.html
@@ -5,4 +5,5 @@
     </ion-item-divider>
     <ion-item>E-mail: {{ user?.email }}</ion-item>
     <ion-item *ngIf="userData && userData.connected">Connected: {{ userData.connected }}</ion-item>
+    <ion-item *ngIf="userData && !userData.connected">Not connected yet! Send an invite! :-)</ion-item>
 </ion-list>
