--- a/src/components/register/register.html
+++ b/src/components/register/register.html
@@ -11,6 +11,34 @@
                         <ion-input placeholder="Password" type="password" [(ngModel)]="account.password"
                                    name="password"></ion-input>
                     </ion-item>
+
+                    <ion-list radio-group [(ngModel)]="account.local" name="gender">
+                        <ion-item>
+                            <ion-label>Popular names in the Netherlands</ion-label>
+                            <ion-radio value="nl"></ion-radio>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-label>Popular names in the USA</ion-label>
+                            <ion-radio value="us"></ion-radio>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-label>Popular names in the UK</ion-label>
+                            <ion-radio value="uk"></ion-radio>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-label>Popular names in France</ion-label>
+                            <ion-radio value="fr"></ion-radio>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-label>Popular names in Germany</ion-label>
+                            <ion-radio value="de"></ion-radio>
+                        </ion-item>
+                    </ion-list>
+
                     <ion-item>
                         <button ion-button block type="submit">Create account</button>
                     </ion-item>
