--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -45,22 +45,41 @@ div.kawaii {
   height: 20em;
   width: 18em;
   margin: 2em auto 0;
+
   &:focus {
     * {
-      animation: .2s linear 0s 3 match;
+      animation: .2s linear 0s 3 wiggle;
+    }
+    .eyes .eye {
+      animation: none;
+      &:before {
+        content: '';
+        position: absolute;
+        top: .8em;
+        height: 1.3em;
+        width: 1.3em;
+        background: #A8B3ED;
+        border-radius: 50%;
+      }
     }
   }
   &.match {
-    animation: .2s linear 0s infinite match;
-    &:before {
-      content: "match!";
-      width: 100%;
-      text-align: center;
-      display: block;
-      padding: 10px 0;
-      position: absolute;
-      bottom: 25%;
-      animation: wiggle infinite 1s;
+    animation: .8s linear 0s infinite match;
+    .eyes .eye {
+      animation: none;
+      &:before {
+        content: '';
+        position: absolute;
+        top: .8em;
+        height: 1.3em;
+        width: 1.3em;
+        background: #A8B3ED;
+        border-radius: 50%;
+      }
+    }
+
+    .mouth {
+      height: 1.7em;
     }
   }
 }
@@ -76,7 +95,7 @@ div.kawaii .eyes .eye {
   transform-origin: 50% 50%;
 }
 
-div.kawaii .eyes .eye-left{
+div.kawaii .eyes .eye-left {
   left: 4em;
 }
 
@@ -116,18 +135,17 @@ div.kawaii .mouth {
 @keyframes zoom-pop {
   0% {
     opacity: 0.0;
-    transform: scale(0.00) ;
+    transform: scale(0.00);
   }
   62% {
     opacity: 0.8;
-    transform: scale(1.20) ;
+    transform: scale(1.20);
   }
   100% {
-    opacity:1;
-    transform: scale(1.00) ;
+    opacity: 1;
+    transform: scale(1.00);
   }
 }
-
 
 @keyframes wiggle {
   0% {
@@ -174,21 +192,37 @@ div.kawaii .mouth {
     transform: translateY(0);
   }
   50% {
-    transform: translateY(20px) ;
+    transform: translateY(20px);
   }
   100% {
-    transform: translateY(0) ;
+    transform: translateY(0);
   }
 }
 
-@keyframes opacity {
+@keyframes orbit {
   0% {
     opacity: 1;
+    transform: translateX(0) scale(1.2);
+    z-index: 1000;
+  }
+  25% {
+    opacity: .9;
+    transform: translateX(-300px) scale(1);
+    z-index: 1000;
   }
   50% {
     opacity: 0;
+    transform: translateX(0) scale(.8);
+    z-index: 0;
+  }
+  75% {
+    opacity: .9;
+    transform: translateX(300px) scale(1);
+    z-index: 0;
   }
   100% {
     opacity: 1;
+    transform: translateX(0) scale(1.2);
+    z-index: 1000;
   }
 }
