made the local register dynamic

--- a/src/components/register/register.html
+++ b/src/components/register/register.html
@@ -13,31 +13,12 @@
                     </ion-item>
 
                     <ion-list radio-group [(ngModel)]="account.local" name="gender">
-                        <ion-item>
-                            <ion-label>Popular names in the USA</ion-label>
-                            <ion-radio value="us" checked="true"></ion-radio>
-                        </ion-item>
-
-                        <ion-item>
-                            <ion-label>Popular names in the UK</ion-label>
-                            <ion-radio value="uk"></ion-radio>
-                        </ion-item>
-
-                        <ion-item>
-                            <ion-label>Popular names in France</ion-label>
-                            <ion-radio value="fr"></ion-radio>
-                        </ion-item>
-
-                        <ion-item>
-                            <ion-label>Popular names in Germany</ion-label>
-                            <ion-radio value="de"></ion-radio>
-                        </ion-item>
-
-                        <ion-item>
-                            <ion-label>Popular names in the Netherlands</ion-label>
-                            <ion-radio value="nl"></ion-radio>
-                        </ion-item>
-
+                        <ng-container *ngFor="let local of locals">
+                            <ion-item *ngIf="local.country">
+                                <ion-label>Popular names in {{ local.country }}</ion-label>
+                                <ion-radio value="{{ local.$key }}"></ion-radio>
+                            </ion-item>
+                        </ng-container>
                     </ion-list>
 
                     <ion-item>
