--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,3 +24,14 @@
 .fixed-content {
   margin-bottom: 56px !important;
 }
+
+[nav-view-transition][nav-view-direction] {
+  background-color: transparent;
+}
+
+.ion-page {
+  background-color: white;
+  ion-content, .scroll-content {
+    padding-top: 15px;
+  }
+}
